[gd_scene load_steps=6 format=3 uid="uid://dqxt45vib2tql"]

[ext_resource type="Script" path="res://Project/Enemy/enemy_base_hsm.gd" id="1_quw85"]
[ext_resource type="Texture2D" uid="uid://dt0jh1xk16ehj" path="res://icon.svg" id="2_iqwl7"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_bagj1"]
light_mode = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_clvgy"]
radius = 26.6667

[sub_resource type="CircleShape2D" id="CircleShape2D_404gt"]
radius = 21.6738

[node name="EnemyBaseHSM" type="CharacterBody2D" node_paths=PackedStringArray("hsm") groups=["Enemy", "Entity"]]
scale = Vector2(1.8, 1.8)
collision_mask = 73
motion_mode = 1
script = ExtResource("1_quw85")
hsm = NodePath("EnemyHSM")

[node name="EnemyHSM" type="LimboHSM" parent="."]

[node name="Rig" type="Node2D" parent="."]
material = SubResource("CanvasItemMaterial_bagj1")

[node name="Body" type="Sprite2D" parent="Rig"]
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_iqwl7")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 5.0
avoidance_enabled = true
radius = 50.0
max_neighbors = 5
time_horizon_agents = 0.1
max_speed = 1000.0
debug_enabled = true

[node name="BodyDetection" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyDetection"]
shape = SubResource("CircleShape2D_clvgy")
debug_color = Color(0.0994172, 0, 0.76481, 0.42)

[node name="Timers" type="Node2D" parent="."]

[node name="LookTimer" type="Timer" parent="Timers"]
wait_time = 4.0
one_shot = true

[node name="LookAroundTimer" type="Timer" parent="Timers"]
wait_time = 2.0

[node name="ToCombatTimer" type="Timer" parent="Timers"]

[node name="LOSEnabler" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-1.62125e-05, 0.555555)
scale = Vector2(2.66667, 2.77778)
enable_node_path = NodePath("")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_404gt")

[connection signal="area_entered" from="BodyDetection" to="." method="_on_body_detection_area_entered"]
[connection signal="timeout" from="Timers/LookTimer" to="." method="return_to_idle"]
[connection signal="timeout" from="Timers/LookAroundTimer" to="." method="_on_look_around_timer_timeout"]
